--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
+    "assert": "^2.1.0",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "chakra-react-select": "^5.0.2",
@@ -28,14 +29,16 @@
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.5",
+    "stream": "^0.0.3",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.13",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
