--- a/ui/package.json
+++ b/ui/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://singh2198.github.io",
   "name": "ui",
   "version": "0.1.0",
   "private": true,
@@ -27,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "redux": "^5.0.1",
+    "gh-pages": "^6.1.1",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.5",
     "stream": "^0.0.3",
@@ -39,7 +41,8 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
