--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
